--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "rtk_node",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "dotenv": "^17.0.0",
     "gps": "^0.7.4",
     "serialport": "^13.0.0"
   }
