clean up and add systemd

--- a/env.sample
+++ b/env.sample
@@ -1,7 +1,5 @@
-# RTK Handler Configuration
-
 # UART Configuration
-UART_PORT=/dev/tty.usbserial-83110
+UART_PORT=/dev/ttyUSB0
 BAUDRATE=115200
 
 # NTRIP Configuration
@@ -13,27 +11,10 @@ NTRIP_PASSWORD=XXX
 NTRIP_USE_HTTPS=false
 NTRIP_USER_AGENT=LC29HDA-Client
 
-# Optional Position Configuration (some NTRIP servers require this)
-# Leave empty to disable position reporting
-POSITION_LAT=
-POSITION_LON=
-POSITION_ALT=50
-
-# Logging Configuration
-# Set to VERBOSE for debug logging, INFO for normal logging
-LOGGING=INFO
-
-# Threading Configuration
-THREAD_JOIN_TIMEOUT=2.0
-RTCM_CHUNK_SIZE=1024
-SOCKET_TIMEOUT=30
-NTRIP_CONNECT_TIMEOUT=10
-NTRIP_RETRY_DELAY=5
-
-# Status Reporting Configuration
-STATUS_REPORT_INTERVAL=10
-RTCM_STALE_THRESHOLD=5
-
 # Streaming NMEA over TCP
-TCP_PORT='10110'
+TCP_PORT='10112'
 TCP_HOST='0.0.0.0'
+TCP_MAX_CLIENTS=10
+
+TCP_ALLOW='RMC,VTG,GGA'
+TCP_ONLY_RTK_FIXED=true
