--- a/env.sample
+++ b/env.sample
@@ -19,5 +19,5 @@ TCP_MAX_CLIENTS=10
 TCP_ALLOW='RMC,VTG,GGA'
 TCP_ONLY_RTK_FIXED=true
 
-LOG_FILE='rtk_log.csv'
+LOG_FILE='rtk_log.txt'
 LOG_WRITE_PERIOD=180
