add upload to DigitalOcean Spaces via S3

--- a/env.sample
+++ b/env.sample
@@ -21,3 +21,9 @@ TCP_ONLY_RTK_FIXED=true
 
 LOG_FILE='rtk_log.txt'
 LOG_WRITE_PERIOD=180
+
+S3_HOST=https://rtk-logs.nyc3.digitaloceanspaces.com
+S3_BUCKET=raw_logs
+S3_KEY=XXX
+S3_SECRET=XXX
+S3_SECONDS=180
